crates/strider-analyze/tests/snapshots/v3__aarch64__complex__if_bit_clear_call.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="init\nx1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="init\nx0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "11" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0x860:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "12" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "8" -> "12" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "15" -> "12" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "16" -> "12" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "17" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "12" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v18" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v18" [color="#888888", style=dashed];
  "v18" -> "17" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v19" [color="#888888", style=dashed];
  "v19" -> "17" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v20" [color="#888888", style=dashed];
  "v20" -> "17" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v21" [color="#888888", style=dashed];
  "v21" -> "17" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "25" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v27" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v27" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "28" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v29" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v29" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "11" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "22" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
